no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #13.0.0 (current), 12.13.0 (active LTS), 10.16.3 (active LTS), 8.16.2 (active LTS)
+VERSION ==>                                     #13.0.1 (current), 12.13.0 (active LTS), 10.17.0 (active LTS), 8.16.2 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -248,6 +248,7 @@ SYSTEMERROR.address|port                        #HOST|PORT, if any
 SYSTEMERROR.info                                #Extra info, if any
 
 --enable-source-maps                         12*#Use source maps for ERROR.stack
+                                             12*#Does not work with ERROR.prepareStackTrace()
 
 
                                              /=+===============================+=\
@@ -394,7 +395,7 @@ CLI ==>                                         #require.main, process.mainModul
                                                 #exports is undefined (but not MODULE.exports)
 
 PACKAGE.exports                                 #OBJ of { "PATH": "PATH2", ... } translating import ... from '...'
---experimental-exports                          #Only used:
+                                                #Only used:
                                                 #  - on ESM import (not CommonJS)
                                                 #  - with import ... from 'MODULE/...', not '.[.]/MODULE' nor 'file:///...'
                                                 #  - if PACKAGE.type 'module'
@@ -658,7 +659,7 @@ OBJECT MODE ==>                                 #SVAL is any VAL (except null):
 
 ISTREAM ==>                                     #Input stream. Actually called Readable
                                                 #Is an ASYNC_ITERABLE
-                                             11*#  - does not print experimental warning anymore
+                                        10.17.0*#  - does not print experimental warning anymore
 new STREAM.Readable([OBJ])                      #OBJ:
                                                 #  - encoding 'ENCODING' (def: null, i.e. uses BUFFER)
                                                 #  - objectMode BOOL: see above
@@ -698,9 +699,9 @@ ISTREAM.unshift(SVAL[, 'ENCODING'])             #Put last SVAL read back in ISTR
 ISTREAM.destroy([ERROR])                        #
 ISTREAM.destroyed                               #BOOL
 
-Readable.from(SVAL_ITERABLE[, OBJ])->ISTREAM 12*#OBJ:
-                                                #  - same as new Readable(OBJ)
-                                                #  - def objectMode is true
+Readable.from(SVAL_ITERABLE[, OBJ])     10.17.0*#OBJ:
+ ->ISTREAM                              10.17.0*#  - same as new Readable(OBJ)
+                                        10.17.0*#  - def objectMode is true
 
 OSTREAM ==>                                     #Output stream. Actually called Writable
 STREAM.Writable([OBJ])                          #Constructor for OSTREAM. OBJ members are:
@@ -1678,7 +1679,7 @@ new Resolver()                                  #RESOLVER
 RESOLVER.cancel()                               #Cancel all current resolve*|reverse() calls, with ERROR with code 'ECANCELLED'
 
 promises.*(...)                              10*#Like DNS.*(...) except returns PROMISE and no RESOLVER.cancel()
-                                             11*#No more experimental warning
+                                        10.17.0*#No more experimental warning
 
 
                                              /=+===============================+=\
@@ -2071,7 +2072,7 @@ FS.promises                                  10*#Like FS but:
                                              10*#  - FD_INT are FILE_HANDLE instead
                                              10*#     - no FS.close() but FILE_HANDLE.close() is available
                                              10*#  - FS.constants|Stats|*OK remain on FS.*
-                                             11*#No more experimental warning
+                                         10.7.0*#No more experimental warning
 FILE_HANDLE                                  10*#Abstraction of a file descriptor, with automatic closing on FS PROMISE rejection
 FILE_HANDLE.fd                               10*#FD_INT
 FILE_HANDLE.FUNC(...)                        10*#Same as FSP.[f]FUNC(FILE_HANDLE, ...)
@@ -2245,9 +2246,9 @@ on("uncaughtException", FUNC(ERROR, STR))       #Any exception thrown and not ca
                                                 #  - not possible with Express since it catches any error within request handler
                                                 #Unless an event handler exists, calls process.exit(1)
                                                 #  - should always call process.exit(1) within event handler to keep this behavior
-                                             12*#STR is either:
-                                             12*#  - 'unhandledRejection': came from --unhandled-rejections=strict
-                                             12*#  - 'uncaughtException': otherwise
+                                        10.17.0*#STR is either:
+                                        10.17.0*#  - 'unhandledRejection': came from --unhandled-rejections=strict
+                                        10.17.0*#  - 'uncaughtException': otherwise
 setUnaughtExceptionCaptureCallback            9*#Same as on("uncaughtException") except:
  (FUNC(ERROR)|null)                           9*#  - unsets "uncaughtException" handler
                                               9*#  - unsets --abort-on-uncaught-exception
@@ -2293,11 +2294,11 @@ on('SIGNAL', FUNC('SIGNAL'))                    #Fires when signal emitted on cu
 on('unhandledRejection, FUNC(VAL, PROMISE))     #When PROMISE:
                                                 #  - is rejected
                                                 #  - and has no handler (PROMISE.catch())
---unhandled-rejections=STR                   12*#What to do on 'unhandledRejection':
-                                             12*#  - 'strict': (unless 'unhandledRejection' event handler) warning + uncaughtException
-                                             12*#  - default: (unless 'unhandledRejection' event handler) warning + (once) deprecation warning
-                                             12*#  - 'warn': warning
-                                             12*#  - 'none': nothing
+--unhandled-rejections=STR              10.17.0*#What to do on 'unhandledRejection':
+                                        10.17.0*#  - 'strict': (unless 'unhandledRejection' event handler) warning + uncaughtException
+                                        10.17.0*#  - default: (unless 'unhandledRejection' event handler) warning + (once) deprecation warning
+                                        10.17.0*#  - 'warn': warning
+                                        10.17.0*#  - 'none': nothing
 on('rejectionHandled, FUNC(PROMISE))            #When adding PROMISE.catch() on a PROMISE that:
                                                 #  - was already rejected
                                                 #  - and had no handler when it was rejected (i.e. 'unhandledRejection')
