no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -879,13 +879,13 @@ NAMESPACE MERGING OTHERS ==>      #If another declaration|TYPE (not implementati
                                              \=+===============================+=/
 
 
-declare QUAL VAR ...              #Declaration|TYPEs only, not implementation ("ambient declaration"):
-declare function ...              #  - VAR: cannot be initialized
-declare ... enum ...              #     - except with literal STR|NUM|BOOL|BIGNUM|ENUM (treated as TYPE)
-declare ... class ...             #  - FUNC: no body
-declare namespace ...             #  - enum|class|namespace: only TYPE not value
-declare type ...                  #  - type|interface: noop
-declare interface ...             #Goal:
+declare QUAL VAR ...
+declare function ...              #Declaration|TYPEs only, not implementation ("ambient declaration"):
+declare ... enum ...              #  - VAR: cannot be initialized
+declare ... class ...             #     - except with literal STR|NUM|BOOL|BIGNUM|ENUM (treated as TYPE)
+declare namespace ...             #  - FUNC: no body
+declare type ...                  #  - enum|class|namespace: only TYPE not value
+declare interface ...             #  - type|interface: noop
 
 export declare ...                #ESM `export` must be before `declare`
 
