no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/TypeScript/tsestree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/TypeScript/tsestree.format.txt
@@ -396,10 +396,11 @@ declare QUAL VAR ...
 declare function FUNC() {}
 declare enum ...
 declare class ...
+declare CLASS_PROP: ...
 declare interface ...
-declare namespace ...
-declare type ...                  #On VARIABLE_DECLARATION|FUNCTION_DECLARATION|CLASS_DECLARATION|
-declare module ...                #TS_TYPE_ALIAS_DECLARATION|TS_ENUM_DECLARATION|TS_INTERFACE_DECLARATION|TS_MODULE_DECLARATION:
+declare namespace ...             #On VARIABLE_DECLARATION|FUNCTION_DECLARATION|CLASS_DECLARATION|
+declare type ...                  #CLASS_*_PROPERTY|TS_TYPE_ALIAS_DECLARATION|TS_ENUM_DECLARATION|
+declare module ...                #TS_INTERFACE_DECLARATION|TS_MODULE_DECLARATION:
 declare global ...                #  - [declare BOOL]
 
 declare [async] function FUNC()   #Child of DECLARATION, type 'TSDeclareFunction'. Like FUNCTION_DECLARATION except no body
