no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -880,11 +880,12 @@ NAMESPACE MERGING OTHERS ==>      #If another declaration|TYPE (not implementati
 
 
 declare QUAL VAR ...
-declare function ...              #Declaration|TYPEs only, not implementation ("ambient declaration"):
-declare ... enum ...              #  - VAR: cannot be initialized
-declare ... class ...             #     - except with literal STR|NUM|BOOL|BIGNUM|ENUM (treated as TYPE)
+declare function ...
+declare ... enum ...              #Declaration|TYPEs only, not implementation ("ambient declaration"):
+declare ... class ...             #  - VAR: cannot be initialized
+declare CLASS_PROP: ...           #     - except with literal STR|NUM|BOOL|BIGNUM|ENUM (treated as TYPE)
 declare namespace ...             #  - FUNC: no body
-declare type ...                  #  - enum|class|namespace: only TYPE not value
+declare type ...                  #  - enum|class|classProp|namespace: only TYPE not value
 declare interface ...             #  - type|interface: noop
 
 export declare ...                #ESM `export` must be before `declare`
