no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #6.5.1
+VERSION ==>                       #6.6.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -845,6 +845,7 @@ no-extra-parens [STR] [OBJ]       #Avoid unnecessary parentheses
                                   #    (ignore around JSX, providing it is multi-line or single-line)
                                   #  - enforceForArrowConditionals BOOL (ignore around (...) => ?:)
                                   #  - enforceForSequenceExpressions BOOL (ignore around ..., ...)
+                                  #  - enforceForNewInMemberExpressions BOOL (ignore around new ...)
 no-mixed-operators [OBJ]          #Must add extra (even useless) parenthesis around operators to clarity order,
                                   #when using several operators.
                                   #OBJ:
@@ -1033,7 +1034,7 @@ no-self-assign [OBJ]              #Avoid assignments where both sides are the sa
 no-param-reassign [OBJ]           #Avoid reassigning function parameters
                                   #OBJ:
                                   #  - props BOOL (def: false): applies deeply, i.e. avoid PARAM.VAR = VAL too
-                                  #  - ignorePropertyModificationsFor 'VAR'_ARR (def: []): exceptions for OBJ.props
+                                  #  - ignorePropertyModificationsFor[Regex] 'VAR|REGEXP'_ARR (def: []): exceptions for OBJ.props
 
 fp/*                             ##Module "eslint-plugin-fp" (2.3.0)
 fp/no-mutation [OBJ]             ##Avoid any assignments outside declarations, including = += ++ etc.
@@ -1154,7 +1155,9 @@ fp/no-valueof-field              ##Avoid valueOf()
                                              \=+===============================+=/
 
 
-no-unsafe-negation                #Avoid !VAR in OBJ or !VAR instanceof OBJ (there should be parenthesis after !)
+no-unsafe-negation [OBJ]          #Avoid !VAR in OBJ or !VAR instanceof OBJ (there should be parenthesis after !)
+                                  #OBJ:
+                                  #  - enforceForOrderingRelations BOOL (def: false): avoid !(VAL < > >= <= VAL)
 eqeqeq [STR] [OBJ]                #Must use === !== not == !=
                                   #STR:
                                   #  - 'always' (def)
@@ -1585,6 +1588,7 @@ radix [STR]                       #With parseInt(..., RADIX):
 use-isnan [OBJ]                   #Must test NaN with [Number.]isNaN()
                                   #OBJ:
                                   #  - enforceForSwitchCase BOOL (def: false): forbid case NaN and switch(NaN)
+                                  #  - enforceForIndexOf BOOL (def: false): forbid ARR.[last]indexOf(NaN)
 no-compare-neg-zero               #Avoid VAL === -0 (prefer Object.is(VAL, -0))
 
 unicorn/
