--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -893,17 +893,17 @@ INTERFACE.pause|resume()                        #Like ISTREAM.pause|resume()
 INTERFACE.on("pause|resume", FUNC())            #
 INTERFACE.on("SIGINT|SIGTSTP|SIGCONT", FUNC())  #
 
-clearLine(OSTREAM, NUM[, FUNC()])->BOOL         #Can be 0 (entire line, \e2K) or -1|1 (to the left|right of cursor, \e0K, \e1K)
+clearLine(OSTREAM, NUM[, FUNC()])->BOOL         #Can be 0 (entire line, \e2k) or -1|1 (to the left|right of cursor, \e0k, \e1k)
                                                 #FUNC|BOOL are from the underlying OSTREAM.write()
-cursorTo(OSTREAM, NUM, NUM2[,FUNC()])->BOOL     #Move cursor absolutely (\eNUMA, \eNUMB)
-moveCursor(OSTREAM, NUM[, NUM2][,FUNC()])->BOOL #Move cursor relatively (\eNUM2C, \eNUM2D)
-clearScreenDown(OSTREAM[, FUNC()])->BOOL        #Clear all following lines (\e0J). To clear screen, combine with cursorTo(OSTREAM, 0, 0)
+cursorTo(OSTREAM, NUM, NUM2[,FUNC()])->BOOL     #Move cursor absolutely (\eNUMa, \eNUMb)
+moveCursor(OSTREAM, NUM[, NUM2][,FUNC()])->BOOL #Move cursor relatively (\eNUM2c, \eNUM2d)
+clearScreenDown(OSTREAM[, FUNC()])->BOOL        #Clear all following lines (\e0j). To clear screen, combine with cursorTo(OSTREAM, 0, 0)
 
 emitKeypressEvents(OSTREAM[, INTERFACE])        #Enable OSTREAM.on('keypress')
                                                 #If OSTREAM (e.g. process.stdin) is connected to an INTERFACE, can specify it to disable completion on copy-pasted input
 OSTREAM.on('keypress', FUNC(STR, OBJ))          #STR is what to print (e.g. 'a', undefined or '') (for a, LeftArrow and CTRL-C)
                                                 #OBJ:
-                                                #  - sequence STR (e.g. 'a', '\u001b[D' or '\u0003')
+                                                #  - sequence STR (e.g. 'a', '\u001b[d' or '\u0003')
                                                 #  - name STR (e.g. 'a', 'left' or 'c')
                                                 #  - shift|ctrl|meta BOOL
                                                 #Can use ESC sequences
