--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -131,9 +131,9 @@ MATCH                             #Either:
 CONF                              #Can be:
                                   #  - BABEL-CORE.transform() OBJ
                                   #  - babel CLI flags
-                                  #  - BABEL_ROOT/babel.config.js OBJ[(CONF_API)]
+                                  #  - BABEL_ROOT/babel.config.[c]js|json OBJ[(CONF_API)]
                                   #     - or --config-file|CONF.configFile PATH
-                                  #  - CURRENT_DIR/.babelrc.js OBJ[(CONF_API)]
+                                  #  - CURRENT_DIR/.babelrc.[c]js OBJ[(CONF_API)]
                                   #  - CURRENT_DIR/.babelrc JSON5
                                   #  - CURRENT_DIR/package.json PACKAGE.babel OBJ
 BABEL_ROOT                        #Starts with CONF.root
@@ -573,6 +573,7 @@ proposal-nullish-coalescing
  -operator                        #??
 syntax-numeric-separator
 proposal-numeric-separator        #NNN_NNN_NNN
+syntax-top-level-await            #
 
 STAGE 2 ==>                       #
 syntax-decorators
