--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -8,7 +8,7 @@
 ALTERNATIVES ==>                  #  - typescript (preferred)
                                   #  - flow: very similar to TypeScript, a little less features, less focus on extending JavaScript, less high-profile
 
-VERSION ==>                       #3.7.1-rc
+VERSION ==>                       #3.7.2
 
 
                                              /=+===============================+=\
