--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -5,7 +5,7 @@
 
 
 
-VERSION ==>                       #7.7.1
+VERSION ==>                       #7.7.3
 
 GOAL ==>                          #JavaScript source code transformation
 
@@ -870,6 +870,7 @@ promise/finally                   #
 ES2019 ==>                        #
 array/flat                        #
 array/flat-map                    #
+json/stringify                    #
 object/from-entries               #
 string/match-all                  #
 string/trim-end                   #
