no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -388,6 +388,8 @@ __dirname                                       #Current file absolute dirname
 
 require('module').builtinModules                #List of system 'MODULE'_ARR (e.g. 'http') including internal ones
 
+--experimental-resolve-self                  13*#Allow import|require() on current module's PACKAGE.name
+
 CLI ==>                                         #require.main, process.mainModule: undefined
                                                 #MODULE.loaded: false
                                                 #__filename, __dirname: undefined (but MODULE.filename is '$PWD/repl')
@@ -2240,7 +2242,8 @@ on("exit", FUNC(INT))                           #FUNC() must be sync
 process.exitCode                                #INT set in 'exit' handler providing either process.exit() or uncaught exception.
                                                 #Can be set too
 
-on("uncaughtException", FUNC(ERROR, STR))       #Any exception thrown and not caught in try/catch
+on("uncaughtException", FUNC(VAL, STR))         #Any exception VAL thrown and not caught in try/catch
+                                                #VAL is usually an ERROR
                                                 #Can be exception top-level or within a microtask/macrotask
                                                 #  - e.g. a callback or request handler
                                                 #  - not possible with Express since it catches any error within request handler
@@ -2250,10 +2253,14 @@ on("uncaughtException", FUNC(ERROR, STR))       #Any exception thrown and not ca
                                         10.17.0*#  - 'unhandledRejection': came from --unhandled-rejections=strict
                                         10.17.0*#  - 'uncaughtException': otherwise
 setUnaughtExceptionCaptureCallback            9*#Same as on("uncaughtException") except:
- (FUNC(ERROR)|null)                           9*#  - unsets "uncaughtException" handler
+ (FUNC(VAL)|null)                             9*#  - unsets "uncaughtException" handler
                                               9*#  - unsets --abort-on-uncaught-exception
 hasUnaughtExceptionCaptureCallback()->BOOL    9*#
 --abort-on-uncaught-exception                   #Create a dump file when process exited because of uncaught exception
+--trace-uncaught                             13*#Make default uncaughtException handler also print stack trace of the line that threw
+                                             13*#If ERROR throw, this will be same stack trace, shown twice.
+                                             13*#But for non-ERROR, this is useful since they don't have stack traces otherwise.
+                                             13*#Can be bad for garbage collection.
 
 exit([UINT])                                    #Exit with exit code UINT (def: 0)
                                                 #Pending microtasks|macrotasks will be aborted. Streams won't be flushed.
