no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1944,6 +1944,9 @@ DIRENT.name                                  10*#STR
 opendir(DIR[, OPTS], FUNC(ERROR, FSDIR))     12*#Like readdir() but iteratively. Unordered.
                                              12*#OPTS:
                                              12*#  - encoding 'ENCODING'
+                                             13*#  - bufferSize NUM (def: 32):
+                                             13*#     - number of directories in a batch (internally)
+                                             13*#     - higher value gives better performance but requires more memory
 FSDIR.path                                   12*#'DIR' (as specified in input)
 FSDIR.read()->PROMISE_DIRENT|null            12*#Get next directory entry or null if no more
 FSDIR.close()->PROMISE                       12*#Cleanup file descriptor after iteration done
@@ -2814,7 +2817,9 @@ createHash(STR[, OPTS])                         #Returns a HASH, i.e. a IOSTREAM
                                                 #OPTS:
                                                 #  - same as STREAM.Transform(OPTS)
                                              12*#  - outputLength NUM (in bytes)
-createHmac(STR, STDBUFFER|KEY)                  #Same but for a HMAC. STR is hash algo. Second argument is the key.
+HASH.copy([OPTS])->HASH2                     13*#Clone. Keep state. Doe snot work if HASH already closed.
+
+createHmac(STR, STDBUFFER|KEY)                  #Same as createHash() but for a HMAC. STR is hash algo. Second argument is the key.
 createCipheriv(STR, STDBUFFER|KEY,STDBUFFER|null#Same but for a CIPHER (sym. cipher).
  [, OPTS])                                      #Key must be KEY|TDBUFFER or STR with encoding "binary".
                                                 #Third argument is IV.
