no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #13.0.1 (current), 12.13.0 (active LTS), 10.17.0 (active LTS), 8.16.2 (active LTS)
+VERSION ==>                                     #13.1.0 (current), 12.13.0 (active LTS), 10.17.0 (active LTS), 8.16.2 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -1044,6 +1044,8 @@ UDPSOCKET.setBroadcast(BOOL)                    #
 UDPSOCKET.setMulticastLoopback(BOOL)            #
 UDPSOCKET.setMulticastInterface(STR)            #
 UDPSOCKET.add|dropMembership(STR[, STR2])       #Routing options
+UDPSOCKET.add|dropSourceSpecificMembership
+ (STR3, STR[, STR2])                            #Same but specifies source STR3
 UDPSOCKET.set[Multicast]TTL(UINT)               #
 
 
