no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2429,8 +2429,10 @@ spawn(STR[, STR2_ARR][, OPTS])->CHILDPROCESS    #Creates and runs a CHILDPROCESS
                                                 #          programmatic signal, CTRL-C, CTRL-\
                                                 #        - on Unix, child process always does, even if `detached: false`, except for `CTRL-C` (in terminal)
                                                 #     - create a new process group
-                                                #  - windowsHide BOOL (def: false):
-                                                #     - if detached true, in Windows and in terminal, do not create new terminal window
+                                                #  - windowsHide BOOL (def: false) (Windows only):
+                                                #     - if detached true and in terminal:
+                                                #        - do not create new terminal window
+                                                #        - but cannot use CTRL-C
                                                 #Use CHILDPROCESS.ref(), so needs to use unref() if program can exit while CHILDPROCESS is running.
 fork(STR[, STR2_ARR][, OPTS])->CHILD_PROCESS    #Same as spawn() but using 'node STR ...STR2_ARR'
                                                 #OPTS:
