no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -666,7 +666,7 @@ new STREAM.Readable([OBJ])                      #OBJ:
                                                 #  - encoding 'ENCODING' (def: null, i.e. uses BUFFER)
                                                 #  - objectMode BOOL: see above
                                                 #  - highWaterMark NUM:
-                                                #     - buffer size (def: 16kb)
+                                                #     - buffer size (def: 16KB)
                                                 #     - on ISTREAM: data available for read but not read yet
                                                 #     - on OSTREAM: data not flushed yet
                                                 #     - if buffer full, waits
