no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1101,8 +1101,8 @@ unicorn/prevent-abbreviations    ##Prevent abbreviations/shortnames for variable
                                  ##  - extendDefaultReplacements BOOL (def: true): if false, replace list instead of extending it
                                  ##  - whitelist { STR: true, ... }: allow STR (case-sensitive)
                                  ##  - extendDefaultWhitelist BOOL (def: true)
-                                 ##  - checkDefaultAndNamespaceImports BOOL (def: false): check "import ... from" and "import * as ... from"
-                                 ##  - checkShorthandImports BOOL (def: false): check "import {VAR} from"
+                                 ##  - checkDefaultAndNamespaceImports 'internal' (def) or BOOL: check "import ... from" and "import * as ... from"
+                                 ##  - checkShorthandImports 'internal' (def) or BOOL: check "import {VAR} from"
                                  ##  - checkShorthandProperties BOOL (def: false): check "const {VAR} = VAL"
                                  ##  - checkProperties BOOL (def: false): check OBJ.VAR
                                  ##  - checkVariables BOOL (def: true): check VAR
@@ -1531,7 +1531,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (12.1.0)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (13.0.0)
 unicorn/prefer-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
 unicorn/prefer-string-slice      ##Must use STR.slice() instead of STR.substr|substring()
 
@@ -1868,6 +1868,8 @@ unicorn/filename-case [OBJ]      ##Filenames cases must be OBJ:
                                  ##  - case 'CASE'
                                  ##  - cases.CASE BOOL
                                  ##CASE is 'kebabCase' (def), 'camelCase', 'snakeCase', 'pascalCase'
+                                 ##Other OBJ:
+                                 ##  - ignore STR|REGEXP[_ARR]
 filenames/match-exported         ##Default exported variable must have same name as current file (or directory if index.js)
  [STR...] [STR2]                 ##Default exported variables are either:
                                  ##  - CommonJS: module.exports = VAR; but not module.exports = { ... }
