no commit message

--- a/Languages/Language_processing/Beautifiers/Multi_language/prettier.node_cli.txt
+++ b/Languages/Language_processing/Beautifiers/Multi_language/prettier.node_cli.txt
@@ -19,7 +19,7 @@ ALTERNATIVES ==>                  #For:
                                   #     - esformatter (and jsfmt): not maintained
                                   #     - es-beautifier: not maintained
 
-VERSION ==>                       #1.18.2
+VERSION ==>                       #1.19.1
 
 OPINIONATED ==>                   #By design prettier does not allow configuration.
                                   #There are only few configuration options available for JavaScript
@@ -319,6 +319,16 @@ STYLELINT-CONFIG-PRETTIER ==>    ##Stylelint config that:
                                  ##  - should be last in CONF.extends to make sure it is not overridden
                                  ##Also contains a CLI which checks if current ESLint config might conflict with Prettier.
                                  ##Version 3.2.0
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:              VUE              :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+--vue-indent-script-and-style     #BOOL (def: false). Whether to indent code inside <script> and <style>
 
 
                                              /=+===============================+=\
